# rmtemplates-backend

./: .gitignore  gapi-cors.json  pyproject.toml  requirements.txt  rm_to_g.py
server/: main.py
